ACC19 final draft prior to submission.

--- a/ACC19refs.bib
+++ b/ACC19refs.bib
@@ -23,18 +23,18 @@ year = {2015}
 @inproceedings{SimleyPao_roteff2013,
 address = {Washington, D.C.},
 author = {Simley, Eric and Pao, Lucy},
-booktitle = {Proc. American Control Conference},
+booktitle = {Proc. American Control Conf.},
 file = {:H$\backslash$:/My Drive/{\_}PhD work/Resources {\&} references/111x{\_}MPC for WTs/1101{\_}Simley {\&} Pao{\_}2013.pdf:pdf},
 isbn = {9781479901784},
-pages = {621--627},
 month = {Jun.},
+pages = {621--627},
 title = {{Reducing LIDAR Wind Speed Measurement Error with Optimal Filtering}},
 year = {2013}
 }
 @inproceedings{Sinner2018,
 address = {Milwaukee, WI},
 author = {Sinner, Michael and Pao, Lucy},
-booktitle = {Proc. American Control Conference},
+booktitle = {Proc. American Control Conf.},
 file = {:H$\backslash$:/My Drive/{\_}PhD work/Resources {\&} references/111x{\_}MPC for WTs/1112{\_}Sinner {\&} Pao{\_}2018.pdf:pdf},
 isbn = {9781538654286},
 month = {Jun.},
@@ -52,13 +52,12 @@ isbn = {9781563479373},
 keywords = {Bir2008,January 2008,NREL/CP-500-42553,wind turbine,wind turbine blades,wind turbine computer modeling},
 mendeley-tags = {Bir2008},
 number = {},
-pages = {1--15},
 title = {{Multi-blade Coordinate Transformation and its Application to Wind Turbine Analysis}},
 year = {Jan. 2008}
 }
 @inproceedings{Bobanac2015,
 author = {Bobanac, V and Vasak, M},
-booktitle = {IEEE International Conference on Industrial Technology},
+booktitle = {IEEE Int. Conf. Industrial Technology},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/ACC intro/1142{\_}Bobanac {\&} Vasak{\_}2015.pdf:pdf},
 pages = {85--92},
 title = {{Adaptive {$H_\infty$} Control of Large Wind Turbines}},
@@ -90,7 +89,7 @@ year = {2014}
 }
 @inproceedings{Chen2014,
 author = {Chen, Z. J. and Stol, K. A.},
-booktitle = {Journal of Physics: Conference Series},
+booktitle = {J. Physics: Conf. Series},
 doi = {10.1088/1742-6596/524/1/012045},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/Chen{\_}2014{\_}J.{\_}Phys.{\%}3A{\_}Conf.{\_}Ser.{\_}524{\_}012045.pdf:pdf},
 isbn = {1742-6588 *****************},
@@ -107,14 +106,13 @@ author = {Hayman, G J},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/User guides/MLife{\_}Theory.pdf:pdf},
 institution = {NREL},
 number = {},
-pages = {12},
 title = {{MLife Theory Manual for Version 1.00}},
 year = {Oct. 2012}
 }
 @inproceedings{Gros2013_2,
 address = {Florence, Italy},
 author = {Gros, S and Vukov, M and Diehl, M},
-booktitle = {IEEE Conference on Decision and Control},
+booktitle = {IEEE Conf. Decision and Control},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/111x{\_}MPC for WTs/1112{\_}Gros et al{\_}2013.pdf:pdf},
 month = {Dec.},
 pages = {1007--1012},
@@ -126,7 +124,7 @@ author = {Gros, Sebastien and Schild, Axel},
 doi = {10.1080/00207179.2016.1266514},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/Real time economic nonlinear model predictive control for wind turbine control.pdf:pdf},
 issn = {13665820},
-journal = {International Journal of Control},
+journal = {Int. J. Control},
 keywords = {Economic NMPC,NMPC,Wind turbine control,real-time},
 number = {12},
 pages = {2799--2812},
@@ -166,7 +164,7 @@ year = {Aug. 2005}
 @article{Koerber2013,
 author = {Koerber, A and King, R},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/111x{\_}MPC for WTs/1111{\_}Koerber {\&} King{\_}2013.pdf:pdf},
-journal = {IEEE Transactions on Control Systems Technology},
+journal = {IEEE Trans. Control Systems Technology},
 month = {Jul.},
 number = {4},
 pages = {1117--1128},
@@ -189,14 +187,13 @@ file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} 
 keywords = {LazardLCOE2016},
 mendeley-tags = {LazardLCOE2016},
 number = {},
-pages = {1--21},
 title = {{Lazard's Levelised Cost of Energy Analysis (version 10.0)}},
 year = {Dec. 2016}
 }
 @inproceedings{Mirzaei2016,
 address = {Boston, MA},
 author = {Mirzaei, M and Hansen, M H},
-booktitle = {Proc. American Control Conference},
+booktitle = {Proc. American Control Conf.},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/111x{\_}MPC for WTs/1112{\_}Mirzaei {\&} Hansen{\_}2016.pdf:pdf},
 month = {Jul.},
 pages = {1381--1386},
@@ -206,7 +203,7 @@ year = {2016}
 @inproceedings{Mirzaei2012,
 address = {Dubrovnik, Croatia},
 author = {Mirzaei, M and Henriksen, L C and Poulsen, N K and Niemann, H H and Hansen, M H},
-booktitle = {IEEE International Conference on Control Applications},
+booktitle = {IEEE Int. Conf. Control Applications},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/111x{\_}MPC for WTs/1112{\_}Mirzaei et al{\_}2012{\_}2.pdf:pdf},
 month = {Oct.},
 pages = {1646--1651},
@@ -217,7 +214,7 @@ year = {2012}
 abstract = {This paper considers the design of linear parameter varying (LPV) controllers for wind turbines in order to obtain a multivariable control law that covers the entire nominal operating trajectory. The paper first presents a controller structure for selecting a proper operating trajectory as a function of estimated wind speed. The dynamic control law is based on LPV controller synthesis with general parameter dependency by gridding the parameter space. The controller construction can, for medium- to large-scale systems, be difficult from a numerical point of view, because the involved matrix operations tend to be ill-conditioned. The paper proposes a controller construction algorithm together with various remedies for improving the numerical conditioning the algorithm. The proposed algorithm is applied to the design of a LPV controller for wind turbines, and a comparison is made with a controller designed using classical techniques to conclude that an improvement in performance is obtained for the entire operating envelope.},
 author = {{\O}stergaard, Kasper Zinck and Stoustrup, Jakob and Brath, Per},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/ACC intro/11x1{\_}Ostergaard et al{\_}2008{\_}LPV.pdf:pdf},
-journal = {International Journal of Robust and Nonlinear Control},
+journal = {Int. J. Robust and Nonlinear Control},
 keywords = {control of wind turbines,gain scheduling,linear parameter varying control,numerical conditioning},
 number = {1},
 pages = {92--116},
@@ -237,7 +234,7 @@ year = {2011}
 @inproceedings{Raach2014,
 address = {Portland, OR},
 author = {Raach, S and Schlipf, D and Sandner, F and Matha, D and Cheng, P W},
-booktitle = {Proc. American Control Conference},
+booktitle = {Proc. American Control Conf.},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/111x{\_}MPC for WTs/1112{\_}Raach et al{\_}2014.pdf:pdf},
 month = {Jun.},
 pages = {4434--4439},
@@ -261,7 +258,7 @@ year = {2000}
 @inproceedings{Schlipf2014_2,
 address = {Portland, OR},
 author = {Schlipf, D and Grau, P and Raach, S and Duraiski, R and Trierweiler, J and Cheng, P W},
-booktitle = {Proc. American Control Conference},
+booktitle = {Proc. American Control Conf.},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/111x{\_}MPC for WTs/1112{\_}Schlipf et al{\_}2014.pdf:pdf},
 month = {Jun.},
 pages = {3742--3747},
@@ -274,10 +271,9 @@ author = {Schlipf, David and Fleming, Paul A. and Haizmann, Florian and Scholbro
 doi = {10.1088/1742-6596/555/1/012090},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/ACC intro/1121{\_}Schlipf et al{\_}2012{\_}FF.pdf:pdf},
 issn = {1742-6588},
-journal = {Journal of Physics: Conference Series},
+journal = {J. Physics: Conf. Series},
 keywords = {NREL/JA-5000-55222},
 number = {1},
-pages = {},
 title = {{Field Testing of Feedforward Collective Pitch Control on the CART2 Using a Nacelle-Based Lidar Scanner}},
 volume = {555},
 year = {2014}
@@ -285,16 +281,15 @@ year = {2014}
 @inproceedings{SimleyPao2015,
 address = {Chicago, IL},
 author = {Simley, E and Pao, L Y},
-booktitle = {Proc. American Control Conference},
+booktitle = {Proc. American Control Conf.},
 month = {Jul.},
-pages = {3708--3714},
 title = {{A Longitudinal Spatial Coherence Model for Wind Evolution based on Large-eddy Simulation}},
 year = {2015}
 }
 @inproceedings{Soltani2011,
 address = {Denver, CO},
 author = {Soltani, M and Wisniewski, R and Brath, P and Boyd, S},
-booktitle = {IEEE International Conference on Control Applications},
+booktitle = {IEEE Int. Conf. Control Applications},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/111x{\_}MPC for WTs/1112{\_}Soltani et al{\_}2011.pdf:pdf},
 month = {Sep.},
 pages = {852--857},
@@ -328,7 +323,7 @@ year = {2015}
 @inproceedings{Mirzaei2013,
 address = {Washington, D.C.},
 author = {Mirzaei, M and Soltani, M and Poulsen, N K and Niemann, H H},
-booktitle = {Proc. American Control Conference},
+booktitle = {Proc. American Control Conf.},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/111x{\_}MPC for WTs/1112{\_}Mirzaei et al{\_}2013.pdf:pdf},
 month = {Jun.},
 pages = {2235--2240},
@@ -340,8 +335,8 @@ author = {Schlipf, D and Schlipf, D J and Kuhn, M},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/111x{\_}MPC for WTs/1111{\_}Schlipf et al{\_}2013.pdf:pdf},
 journal = {Wind Energy},
 month = {Oct.},
-number = {7},
 pages = {1107--1129},
+number = {7},
 title = {{Nonlinear Model Predictive Control of Wind Turbines Using LIDAR}},
 volume = {16},
 year = {2013}
@@ -349,7 +344,7 @@ year = {2013}
 @inproceedings{Tofighi2015,
 address = {Gold Coast, Australia},
 author = {Tofighi, E and Faulwasser, T and Kellet, C M},
-booktitle = {Proc. Australian Control Conference},
+booktitle = {Proc. Australian Control Conf.},
 file = {:C$\backslash$:/Users/misi9170/Google Drive/{\_}PhD work/Resources {\&} references/111x{\_}MPC for WTs/1112{\_}Tofighi et al{\_}2015.pdf:pdf},
 month = {Nov.},
 pages = {210--214},
@@ -391,4 +386,29 @@ isbn = {978-0-470-12867-1},
 publisher = {John Wiley {\&} Sons, Ltd.},
 title = {{Process Dynamics and Control}},
 year = {2011}
+}
+@article{Wada2006,
+author = {Wada, Nobutaka and Saito, Koji and Saeki, Masami},
+file = {:F$\backslash$:/My Drive/{\_}PhD work/Resources {\&} references/101x{\_}MPC general/1011{\_}Wada et al{\_}2006{\_}LPVMPC.pdf:pdf},
+journal = {IEEE Trans. Circuits and Systems - II: Express Briefs},
+number = {12},
+pages = {1446--1450},
+title = {{Model Predictive Control for Linear Parameter Varying Systems Using Parameter Dependent Lyapunov Function}},
+volume = {53},
+year = {2006}
+}
+@article{Satzger2017,
+abstract = {This paper proposes a robust model predictive controller for linear parameter varying (LPV) systems subject to additive disturbances. The proposed controller relies on the constraint tightening method to guarantee that the MPC's optimization problem remains feasible in the presence of additive disturbances. In order to decrease the conservativeness, the controller synthesis considers bounded parameter rate variations in the construction of the tightened constraints. Relevant features, such as recursive feasibility and stability of the LPV-MPC, are theoretically proven. Finally, the proposed controller is applied to a wheel-slip control problem and its effectiveness is shown by simulation results.},
+author = {Satzger, Clemens and de Castro, Ricardo and Knoblach, Andreas},
+doi = {10.1016/j.ifacol.2017.08.301},
+file = {:F$\backslash$:/My Drive/{\_}PhD work/Resources {\&} references/101x{\_}MPC general/1012{\_}Stazger et al{\_}2017{\_}LPVMPC.pdf:pdf},
+issn = {24058963},
+journal = {IFAC Papers Online},
+keywords = {linear parameter varying systems,robust model predictive control,tube MPC,wheel slip control},
+number = {1},
+pages = {1514--1520},
+publisher = {Elsevier B.V.},
+title = {{Robust Linear Parameter Varying Model Predictive Control and its Application to Wheel Slip Control}},
+volume = {50},
+year = {2017}
 }
